Added form input validation with regex and improved CSS for responsive design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <!--  -->
               <div class="header-section1-socials-group1-item">
                 <i class="fa-solid fa-square-phone"></i>
-                <p>( +62 ) 123 456 789</p>
+                <p><a href="tel:+62123456789">( +62 ) 123 456 789</a></p>
               </div>
               <!--  -->
             </div>
@@ -110,15 +110,15 @@
             <div class="header-section3-form-wrapper">
               <div class="header-section3-form-group">
                 <div class="header-section3-form-group-item">
-                  <input type="text" placeholder="Your Name"  id="name"/>
+                  <input type="text" placeholder="Your Name" id="name" />
                 </div>
                 <div class="header-section3-form-group-item">
-                  <input type="text" placeholder="Telephone"  id="tel"/>
+                  <input type="text" placeholder="Telephone" id="tel" />
                 </div>
               </div>
               <div class="header-section3-form-group">
                 <div class="header-section3-form-group-item">
-                  <input type="text" placeholder="Your Address"  id="addy"/>
+                  <input type="text" placeholder="Your Address" id="addy" />
                 </div>
                 <div class="header-section3-form-group-item">
                   <select id="select">
